--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ canvas#confetti.show{display:block}
 </div>
 
 <!-- ✅ ملف الدروس (كامل بدون قص) -->
-<script src="./lessons.js"></script>
+<script src="./lessons.js?v=20260103"></script>
+
 
 <script>
 /* ✅ ضعي هنا رابط Apps Script الخاص بك */
